fix add flex on mobile style

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -11,24 +11,26 @@
   }
 }
 .contacts__list {
+  display: flex;
+  justify-content: center;
   margin: -20px;
-  margin-bottom: 55px;
+  margin-bottom: 80px;
 
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    justify-content: center;
-    margin: -10px;
-    margin-bottom: 80px;
-  }
   @media screen and (min-width: $desktop) {
     display: flex;
     justify-content: center;
     margin: -15px;
     margin-bottom: 85px;
   }
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: center;
+    margin: -10px;
+    margin-bottom: 55px;
+  }
 }
 .card {
-  margin: 20px auto;
+  margin: 20px;
   width: calc(100vw - 0.3 * 100vw);
   background: $mainColor;
   box-shadow: 0px 8px 30px $shadowColor;
